fix styling bug: body overflow-x

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -4,18 +4,10 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  // box-sizing: border-box;
 }
-
-@keyframes slideIn {
-  0% {
-      // transform: scale(0.1);
-      opacity: 0;
-  }
-  100% {
-    // transform: scale(1);
-    opacity: 1;
-  }
+body{
+  overflow-x: hidden;
 }
 #app{
   // height: 100vh;
@@ -28,6 +20,7 @@
   left: 0;
   margin: 8px 16px;
   background: ghostwhite;
+
   a, span{
     text-decoration: none;
     color: gray;
@@ -39,6 +32,8 @@
   }
 }
 
+// // SEARCH // //
+
 #search {
   display: flex;
   width: 100%;
@@ -46,14 +41,13 @@
 }
 #searchBar{
   font-size: 2em;
+
   &::before{
   display: block;
   content: '\F002';
   font-family: FontAwesome;
   opacity: .2;
   }
-  // width: 50px;
-  // height: 50px;
 }
 .search{
   padding: .5em 1em;
@@ -63,6 +57,7 @@
   background: none;
   border-bottom: 2px solid rgba(0,0,0,.3);
   color: rgba(0,0,0,.5);
+
   &:focus {
       outline: none;
     }
@@ -77,13 +72,16 @@
   min-width: 60%;
   border: 1px dashed #dedede;
 }
+
 #article-mini{
   flex-direction: column;
 }
+
 .article-list {
-  // animation: slideIn 3s;
+  animation: slideIn 3s;
   list-style: none;
 }
+
 .article{
   display: flex;
   align-items: center;
@@ -92,9 +90,11 @@
   cursor: pointer;
   border-bottom: 1px solid #dedede;
   line-height: 1em;
+
   *{
     margin: 0;
   }
+
   span:first-child {
     margin: 0 8px;
     padding: 4px 8px;
@@ -102,13 +102,16 @@
     background: blue;
     border-radius: 3px;
   }
+
   &:hover{
     opacity: .7;
   }
 }
+
 .buttons-mini > *{
   margin: 0 8px;
 }
+
 .article-info{
   display: block;
   width: 500px;
@@ -117,9 +120,11 @@
   border: 2px solid RGB(49, 144, 202);
   color: rgba(0,0,0, .7);
   border-radius: 4px;
+
   img{
     width: 100%;
   }
+
   h3{
     padding: 0.5em 0;
   }
@@ -130,7 +135,7 @@
 #favourite{
   padding: 8em 0;
   margin: 0 auto;
-  height: 100%;
+  min-height: 100vh;
   width: 1200px;
   background: ghostwhite;
 }
@@ -157,16 +162,39 @@
   background: #fff;
   clip-path: polygon(0 0, 100% 0, 100% 200px, 1050px 100%, 0 100%);
   transition: 1s;
+
+  .source{
+    padding: 8px 16px;
+    margin-left: 16px;
+    color: rgba(0,0,0,.6);
+    background-color: silver;
+    border-radius: 2px;
+  }
+
+  em{
+    color: rgba(0,0,0,.6);
+    font-weight: 900;
+  }
+
+  .img{
+    width: 400px;
+    height: 100%;
+    background-size: cover;
+  }
 }
+
 .fav-article-card:hover .card-front{
   clip-path: polygon(0 0, 100% 0, 100% 180px, 900px 100%, 0 100%);
 }
+
 .card-text{
   padding: 1em 2em;
+
   h3{
     margin: 1rem 0;
   }
 }
+
 .card-back{
   z-index: 99;
   position: absolute;
@@ -203,6 +231,7 @@
 
 .link-box{
   width: 60px;
+
   &:hover, &:hover *{
     background: #a7ff00;
     color: rgba(green,.5);
@@ -214,9 +243,11 @@
 
 .delete-box{
   flex-grow: 1;
+
   a {
   color: rgba(250,250,250,.5);
   }
+
   &:hover, &:hover *{
     background: #ff5700;
     color: rgba(250,250,250,.5);
@@ -227,25 +258,6 @@
 
 .delete-box a, .link-box a{
   text-decoration: none;
-  // color: #29600;
   font-size: 1.6em;
   padding: 8px 16px;
-}
-
-.source{
-  padding: 8px 16px;
-  margin-left: 16px;
-  color: rgba(0,0,0,.6);
-  background-color: silver;
-  border-radius: 2px;
-}
-em{
-  color: rgba(0,0,0,.6);
-  font-weight: 900;
-}
-
-.img{
-  width: 400px;
-  height: 100%;
-  background-size: cover;
 }
